@@ -1,7 +1,13 @@
 # sdcc-builder profile
 
+# hoat name without domain
+HOSTNAME=$(if test $(expr $(hostname) : '.*\.') != '0'; then expr $(hostname) : '\([^.]*\).'; else echo $(hostname); fi)
+
 # this for svn
 export EDITOR=vi
 
-HOSTNAME=$(if test $(expr $(hostname) : '.*\.') != '0'; then expr $(hostname) : '\([^.]*\).'; else echo $(hostname); fi)
-export PATH=$HOME/local-$HOSTNAME/bin:$PATH
+# perl library
+export PERL5LIB=${HOME}/local-${HOSTNAME}/lib/perl5/site_perl/5.8.8
+
+# path
+export PATH=${HOME}/local-${HOSTNAME}/bin:${PATH}
