@@ -1,3 +1,9 @@
+2008-12-14 Borut Razem <borut.razem AT siol.net>
+
+	* .sdcc_builder/profile: defined PERL5LIB
+	* bin/dcf.sh: test if can't cd
+	* etc/dcf_list: added cf-x86 to DCF
+
 2008-12-13 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.libtool/*: added
